--- a/FE/css/typography.css
+++ b/FE/css/typography.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
 
-.container {
+.font {
   font-family: "Itim", cursive;
   font-weight: 400;
   font-style: normal;
