--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TestingEz</title>
-    <link rel="icon" type="image/x-icon" href="../images/school.png">
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/typography.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../../static/images/school.png"
+    />
+    <link rel="stylesheet" href="../../static/css/reset.css" />
+    <link rel="stylesheet" href="../../static/css/typography.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
