--- a/src/main/resources/templates/html/user-home.html
+++ b/src/main/resources/templates/html/user-home.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link rel="icon" type="image/x-icon" href="../images/school.png" />
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/typography.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../../static/images/school.png"
+    />
+    <link rel="stylesheet" href="../../static/css/reset.css" />
+    <link rel="stylesheet" href="../../static/css/typography.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +28,7 @@
               href="#"
             >
               <img
-                src="..\images\astronaut.png"
+                src="../../static/images/astronaut.png"
                 alt="default-avatar"
                 width="35"
                 height="35"
