--- a/src/main/resources/templates/create-test.html
+++ b/src/main/resources/templates/create-test.html
@@ -7,10 +7,10 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="../static/images/school.png"
+      href="/images/school.png"
     />
-    <link rel="stylesheet" href="../static/css/reset.css" />
-    <link rel="stylesheet" href="../static/css/typography.css" />
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/typography.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,7 +28,7 @@
               href="#"
             >
               <img
-                src="../static/images/astronaut.png"
+                src="/images/astronaut.png"
                 alt="default-avatar"
                 width="35"
                 height="35"
