--- a/src/main/resources/templates/create-test.html
+++ b/src/main/resources/templates/create-test.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
-    <link rel="icon" type="image/x-icon" href="../images/school.png" />
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/typography.css" />
+    <title>Create Test</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/images/school.png"
+    />
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/typography.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +28,7 @@
               href="#"
             >
               <img
-                src="..\images\astronaut.png"
+                src="/images/astronaut.png"
                 alt="default-avatar"
                 width="35"
                 height="35"
@@ -45,13 +49,13 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
                 <a
-                  class="nav-link text-center fs-5 link-light active"
-                  aria-current="page"
+                  class="nav-link text-center fs-5 link-light"
                   href="user-home.html"
                   >Join Test</a
                 >
                 <a
-                  class="nav-link text-center fs-5 link-light"
+                  class="nav-link text-center fs-5 link-light active"
+                  aria-current="page"
                   href="create-test.html"
                   >Create Test</a
                 >
@@ -74,86 +78,97 @@
         </nav>
       </header>
 
-      <main
-        class="container d-flex justify-content-center align-items-center flex-grow-1"
-      >
-        <div class="row gap-3 flex-fill">
-          <div class="col-sm-1 flex-fill align-self-center">
-            <form
-              id="testEntranceForm"
-              class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
-            >
-              <div class="mb-3 flex-fill text-center">
-                <label for="testCode" class="form-label fs-4 text-white"
-                  >Enter Test Code:</label
-                >
-                <input
-                  type="text"
-                  class="form-control border border-black fs-6"
-                  id="testCode"
-                  placeholder="e.g., r%s12#t^"
-                  required
-                />
-              </div>
-              <button
-                type="submit"
-                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
-              >
-                join
-              </button>
-            </form>
+      <main class="d-flex align-items-center flex-grow-1">
+        <div
+          class="container bg-secondary border border-2 border-black rounded shadow text-white fs-4 p-3"
+        >
+          <h1 class="text-center">Create Test</h1>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="name" class="form-label">Test name:</label>
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black shadow fs-5"
+                id="name"
+              />
+            </div>
           </div>
-          <div class="col-lg-1 flex-fill">
-            <div class="container">
-              <div class="row">
-                <div class="col">
-                  <div
-                    class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column"
-                  >
-                    <h3 class="text-white text-center">Previous Results:</h3>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">MAT #1</div>
-                      <div class="test-name">24.05.24</div>
-                      <div class="test-result">0/10</div>
-                    </div>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">BEL #2</div>
-                      <div class="test-name">21.05.24</div>
-                      <div class="test-result">10/10</div>
-                    </div>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">AE #3</div>
-                      <div class="test-name">20.05.24</div>
-                      <div class="test-result">3/10</div>
-                    </div>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">AE #4</div>
-                      <div class="test-name">19.05.24</div>
-                      <div class="test-result">6/10</div>
-                    </div>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">MAT #5</div>
-                      <div class="test-name">18.05.24</div>
-                      <div class="test-result">9/10</div>
-                    </div>
-                    <a
-                      class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                      href="#"
-                      >show all</a
-                    >
-                  </div>
-                </div>
-              </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="description" class="form-label">Description:</label>
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-5"
+                id="description"
+                placeholder="(optional)"
+              />
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="code" class="form-label">Code:</label>
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-5"
+                id="code"
+              />
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="time-for-response" class="form-label"
+                >Time for response:</label
+              >
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-5"
+                id="time-for-response"
+                placeholder="(in minutes)"
+              />
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="questions-count" class="form-label"
+                >Questions count:</label
+              >
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-5"
+                id="questions-count"
+              />
+            </div>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 mb-2">
+            <div class="col">
+              <label for="status" class="form-label">Status:</label>
+            </div>
+            <div class="col">
+              <input
+                type="text"
+                class="form-control border border-black fs-5"
+                id="status"
+                placeholder="(opened/closed)"
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col text-center">
+              <button
+                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5 px-5 mt-3"
+              >
+                next
+              </button>
             </div>
           </div>
         </div>
