--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TestingEz</title>
-    <link rel="icon" type="image/x-icon" href="../images/school.png">
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/typography.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/images/school.png"
+    />
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/typography.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +30,7 @@
           <div class="container-fluid justify-content-center">
             <a class="navbar-brand text-white fs-3" href="#">
               <img
-                src="..\images\school.png"
+                src="/images/school.png"
                 alt="Logo"
                 width="40"
                 height="40"
@@ -47,14 +51,14 @@
             Start testing whomever you want <br />on whatever you want!
           </p>
           <a
-            href="sign-in.html"
+            href="/account/login"
             class="btn btn-secondary btn-lg me-3 px-5 border border-black border-2 shadow rounded"
             role="button"
           >
             Sign In
           </a>
           <a
-            href="sign-up.html"
+            href="/account/create"
             class="btn btn-secondary btn-lg px-5 border border-black border-2 shadow rounded"
             role="button"
           >
