--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -1,108 +1,123 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Sign Up</title>
     <link
-      rel="icon"
-      type="image/x-icon"
-      href="/images/school.png"
+            rel="icon"
+            type="image/x-icon"
+            href="/images/school.png"
     />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/typography.css" />
+    <link rel="stylesheet" href="/css/reset.css"/>
+    <link rel="stylesheet" href="/css/typography.css"/>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
     />
-  </head>
-  <body
-    class="bg-secondary vh-100 d-flex justify-content-center align-items-center font"
-  >
-    <div
-      class="container bg-light p-4 border border-black border-2 rounded-3 shadow p-3 mb-5 bg-body-tertiary rounded fs-5"
-    >
-      <div class="row">
+</head>
+<body
+        class="bg-secondary vh-100 d-flex justify-content-center align-items-center font"
+>
+<div
+        class="container bg-light p-4 border border-black border-2 rounded-3 shadow p-3 mb-5 bg-body-tertiary rounded fs-5"
+>
+    <div class="row">
         <div class="col"><h2 class="text-center">Register</h2></div>
-      </div>
-      <form action="#" method="post" th:action="@{/account/create}" th:object="${userSignUpData}">
-        <div class="row">
-          <div class="col-md">
-            <label for="username" class="form-label">Username:</label>
-            <input
-                    th:field="*{username}"
-              type="text"
-              class="form-control border border-black fs-6"
-              id="username"
-            />
-            <label for="password" class="form-label">Password:</label>
-            <input
-                    th:field="*{password}"
-              type="password"
-              id="password"
-              class="form-control border border-black fs-6"
-              aria-describedby="passwordHelpBlock"
-            />
-          </div>
-          <div class="col-md">
-            <label for="first-name" class="form-label">First Name:</label>
-            <input
-                    th:field="*{firstName}"
-              type="text"
-              class="form-control border border-black fs-6"
-              id="first-name"
-            />
-            <label for="last-name" class="form-label">Last Name:</label>
-            <input
-                    th:field="*{lastName}"
-              type="text"
-              class="form-control border border-black fs-6"
-              id="last-name"
-            />
-          </div>
-          <div class="col-md">
-            <label for="email" class="form-label">Email:</label>
-            <input
-                    th:field="*{email}"
-              type="email"
-              class="form-control border border-black fs-6"
-              id="email"
-              placeholder="name@example.com"
-            />
-            <label for="phone-number" class="form-label">Phone number:</label>
-            <input
-                    th:field="*{phone}"
-              type="text"
-              class="form-control mb-3 border border-black fs-6"
-              id="phone-number"
-              placeholder="+359 XX XXX XXXX"
-            />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col d-flex justify-content-center">
-            <button
-              type="submit"
-              class="btn btn-secondary border border-black border-2 shadow rounded fs-5"
-            >
-              Sign Up
-            </button>
-          </div>
-        </div>
-      </form>
     </div>
+    <form action="#" method="post" th:action="@{/account/create}" th:object="${userSignUpData}">
+        <div class="row">
+            <div class="col-md">
+                <label for="username" class="form-label">Username:</label>
+                <input
+                        th:field="*{username}"
+                        type="text"
+                        class="form-control border border-black fs-6"
+                        id="username"
+                        minlength="5"
+                        maxlength="25"
+                        required
+                />
+                <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-danger fs-6"></div>
+                <label for="password" class="form-label">Password:</label>
+                <input
+                        th:field="*{password}"
+                        type="password"
+                        id="password"
+                        class="form-control border border-black fs-6"
+                        aria-describedby="passwordHelpBlock"
+                        minlength="8"
+                        required
+                />
+                <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger fs-6"></div>
+            </div>
+            <div class="col-md">
+                <label for="first-name" class="form-label">First Name:</label>
+                <input
+                        th:field="*{firstName}"
+                        type="text"
+                        class="form-control border border-black fs-6"
+                        id="first-name"
+                        required
+                />
+                <div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" class="text-danger fs-6"></div>
+                <label for="last-name" class="form-label">Last Name:</label>
+                <input
+                        th:field="*{lastName}"
+                        type="text"
+                        class="form-control border border-black fs-6"
+                        id="last-name"
+                        required
+                />
+                <div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="text-danger fs-6"></div>
+            </div>
+            <div class="col-md">
+                <label for="email" class="form-label">Email:</label>
+                <input
+                        th:field="*{email}"
+                        type="email"
+                        class="form-control border border-black fs-6"
+                        id="email"
+                        placeholder="name@example.com"
+                        required
+                />
+                <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger fs-6"></div>
+                <label for="phone-number" class="form-label">Phone number:</label>
+                <input
+                        th:field="*{phone}"
+                        type="tel"
+                        class="form-control mb-3 border border-black fs-6"
+                        id="phone-number"
+                        pattern="^[0-9]{3}-[0-9]{3}-[0-9]{4}$"
+                        required
+                />
+                <div th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="text-danger fs-6"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <button
+                        type="submit"
+                        class="btn btn-secondary border border-black border-2 shadow rounded fs-5"
+                >
+                    Sign Up
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"
+></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"
+></script>
+</body>
 </html>
