--- a/src/main/resources/templates/user-home.html
+++ b/src/main/resources/templates/user-home.html
@@ -1,203 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Home Page</title>
+    <link rel="icon" type="image/x-icon" href="/images/school.png"/>
+    <link rel="stylesheet" href="/css/reset.css"/>
+    <link rel="stylesheet" href="/css/typography.css"/>
     <link
-      rel="icon"
-      type="image/x-icon"
-      href="/images/school.png"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/typography.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body class="font">
-    <div class="d-flex flex-column vh-100 gap-5">
-      <header class="flex-shrink-0 border-bottom border-black shadow">
+</head>
+<body class="font">
+<div class="d-flex flex-column vh-100 gap-5">
+    <header class="flex-shrink-0 border-bottom border-black shadow">
         <nav class="navbar navbar-expand-lg bg-secondary">
-          <div class="container-fluid gap-1">
-            <a
-              class="navbar-brand bg-light rounded shadow px-1 fs-5 border border-black border-2"
-              href="#"
-            >
-              <img
-                src="/images/astronaut.png"
-                alt="default-avatar"
-                width="35"
-                height="35"
-                class="d-inline-block align-text-middle me-1"
-              />@username</a
-            >
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNavAltMarkup"
-              aria-controls="navbarNavAltMarkup"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
+            <div class="container-fluid gap-1">
                 <a
-                  class="nav-link text-center fs-5 link-light active"
-                  aria-current="page"
-                  href="user-home.html"
-                  >Join Test</a
+                        class="navbar-brand bg-light rounded shadow px-1 fs-5 border border-black border-2"
+                        href="#"
                 >
-                <a
-                  class="nav-link text-center fs-5 link-light"
-                  href="create-test.html"
-                  >Create Test</a
+                    <img
+                            src="/images/astronaut.png"
+                            alt="default-avatar"
+                            width="35"
+                            height="35"
+                            class="d-inline-block align-text-middle me-1"
+                    />@username</a
                 >
-                <a class="nav-link text-center fs-5 link-light" href="#"
-                  >My Results</a
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
                 >
-                <a class="nav-link text-center fs-5 link-light" href="#"
-                  >My Tests</a
-                >
-              </div>
-              <div class="navbar-nav ms-auto">
-                <a
-                  class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
-                  href=""
-                  >Log out</a
-                >
-              </div>
-            </div>
-          </div>
-        </nav>
-      </header>
-
-      <main
-        class="container d-flex justify-content-center align-items-center flex-grow-1"
-      >
-        <div class="row gap-3 flex-fill">
-          <div class="col-sm-1 flex-fill align-self-center">
-            <form
-              id="testEntranceForm"
-              class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
-            >
-              <div class="mb-3 flex-fill text-center">
-                <label for="testCode" class="form-label fs-4 text-white"
-                  >Enter Test Code:</label
-                >
-                <input
-                  type="text"
-                  class="form-control border border-black fs-6"
-                  id="testCode"
-                  placeholder="e.g., r%s12#t^"
-                  required
-                />
-              </div>
-              <button
-                type="submit"
-                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
-              >
-                join
-              </button>
-            </form>
-          </div>
-          <div class="col-lg-1 flex-fill">
-            <div class="container">
-              <div class="row">
-                <div class="col">
-                  <div
-                    class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column"
-                  >
-                    <h3 class="text-white text-center">Previous Results:</h3>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">MAT #1</div>
-                      <div class="test-name">24.05.24</div>
-                      <div class="test-result">0/10</div>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
+                        <a
+                                class="nav-link text-center fs-5 link-light active"
+                                aria-current="page"
+                                href="user-home.html"
+                        >Join Test</a
+                        >
+                        <a
+                                class="nav-link text-center fs-5 link-light"
+                                href="create-test.html"
+                        >Create Test</a
+                        >
+                        <a class="nav-link text-center fs-5 link-light" href="#"
+                        >My Results</a
+                        >
+                        <a class="nav-link text-center fs-5 link-light" href="#"
+                        >My Tests</a
+                        >
                     </div>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">BEL #2</div>
-                      <div class="test-name">21.05.24</div>
-                      <div class="test-result">10/10</div>
+                    <div class="navbar-nav ms-auto">
+                        <a
+                                class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
+                                href=""
+                        >Log out</a
+                        >
                     </div>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">AE #3</div>
-                      <div class="test-name">20.05.24</div>
-                      <div class="test-result">3/10</div>
-                    </div>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">AE #4</div>
-                      <div class="test-name">19.05.24</div>
-                      <div class="test-result">6/10</div>
-                    </div>
-                    <div
-                      class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
-                    >
-                      <div class="test-name">MAT #5</div>
-                      <div class="test-name">18.05.24</div>
-                      <div class="test-result">9/10</div>
-                    </div>
-                    <a
-                      class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
-                      href="#"
-                      >show all</a
-                    >
-                  </div>
                 </div>
-              </div>
             </div>
-          </div>
-        </div>
-      </main>
+        </nav>
+    </header>
 
-      <footer class="shadow border-top border-black bg-secondary">
+    <main
+            class="container d-flex justify-content-center align-items-center flex-grow-1"
+    >
+        <div class="row gap-3 flex-fill">
+            <div class="col-sm-1 flex-fill align-self-center">
+                <form
+                        id="testEntranceForm"
+                        class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
+                >
+                    <div class="mb-3 flex-fill text-center">
+                        <label for="testCode" class="form-label fs-4 text-white"
+                        >Enter Test Code:</label
+                        >
+                        <input
+                                type="text"
+                                class="form-control border border-black fs-6"
+                                id="testCode"
+                                placeholder="e.g., r%s12#t^"
+                                required
+                        />
+                    </div>
+                    <button
+                            type="submit"
+                            class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
+                    >
+                        join
+                    </button>
+                </form>
+            </div>
+            <div class="col-lg-1 flex-fill">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div
+                                    class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column"
+                            >
+                                <h3 class="text-white text-center">Previous Results:</h3>
+                                <div
+                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
+                                >
+                                    <div class="test-name">MAT #1</div>
+                                    <div class="test-name">24.05.24</div>
+                                    <div class="test-result">0/10</div>
+                                </div>
+                                <div
+                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
+                                >
+                                    <div class="test-name">BEL #2</div>
+                                    <div class="test-name">21.05.24</div>
+                                    <div class="test-result">10/10</div>
+                                </div>
+                                <div
+                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
+                                >
+                                    <div class="test-name">AE #3</div>
+                                    <div class="test-name">20.05.24</div>
+                                    <div class="test-result">3/10</div>
+                                </div>
+                                <div
+                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
+                                >
+                                    <div class="test-name">AE #4</div>
+                                    <div class="test-name">19.05.24</div>
+                                    <div class="test-result">6/10</div>
+                                </div>
+                                <div
+                                        class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5"
+                                >
+                                    <div class="test-name">MAT #5</div>
+                                    <div class="test-name">18.05.24</div>
+                                    <div class="test-result">9/10</div>
+                                </div>
+                                <a
+                                        class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
+                                        href="#"
+                                >show all</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="shadow border-top border-black bg-secondary">
         <div class="container-fluid">
-          <footer class="container bg-secondary">
-            <ul class="nav justify-content-center pb-3 mb-3">
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">Features</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">FAQs</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">About</a>
-              </li>
-            </ul>
-            <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
-          </footer>
+            <footer class="container bg-secondary">
+                <ul class="nav justify-content-center pb-3 mb-3">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">FAQs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5">About</a>
+                    </li>
+                </ul>
+                <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
+            </footer>
         </div>
-      </footer>
-    </div>
+    </footer>
+</div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"
+></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"
+></script>
+</body>
 </html>
