files renamed and new controller added for handling the user home page

--- a/src/main/resources/templates/test-create.html
+++ b/src/main/resources/templates/test-create.html
@@ -50,13 +50,13 @@
               <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
                 <a
                   class="nav-link text-center fs-5 link-light"
-                  href="user-home.html"
+                  href="#"
                   >Join Test</a
                 >
                 <a
                   class="nav-link text-center fs-5 link-light active"
                   aria-current="page"
-                  href="create-test.html"
+                  href="#"
                   >Create Test</a
                 >
                 <a class="nav-link text-center fs-5 link-light" href="#"
