--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,30 +67,7 @@
         </div>
       </main>
 
-      <footer class="shadow rounded border-top border-black">
-        <div class="container-fluid">
-          <footer class="container bg-secondary">
-            <ul class="nav justify-content-center pb-3 mb-3">
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">Features</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">FAQs</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link px-2 text-white fs-5">About</a>
-              </li>
-            </ul>
-            <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
-          </footer>
-        </div>
-      </footer>
+      <div th:replace="fragments/footers :: footer"></div>
     </div>
 
     <script
