@NotTaken annotation can now be applied to any field in any class

--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -151,7 +151,7 @@
                             <input
                                     th:field="*{phone}"
                                     type="tel"
-                                    class="form-control mb-3 border border-black fs-6"
+                                    class="form-control border border-black fs-6"
                                     id="phone-number"
                                     placeholder="XXX-XXX-XXXX"
                                     pattern="^[0-9]{3}-[0-9]{3}-[0-9]{4}$"
@@ -169,7 +169,7 @@
                         <div class="col d-flex justify-content-center">
                             <button
                                     type="submit"
-                                    class="btn btn-secondary border border-black border-2 shadow rounded fs-5 px-5"
+                                    class="btn btn-secondary border border-black border-2 shadow rounded fs-5 px-5 mt-3"
                             >
                                 Sign Up
                             </button>
